# pre-commit-hooks

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CHANGELOG  CHANGELOG.md  Makefile  README.md  README_empty-object-with-newline.md  appveyor.yml  azure-pipelines.yml  get-git-lfs.py  hooks.yaml  manifest.yaml  mypy.ini  pre-commit-config-django.yaml  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
configs/: pre-commit-config-django.yaml
pre_commit_hooks/: .json  add_license_header.py  auto_indent.py  autopep8_wrapper.py  branch_name_checker_and_id_issues_checker.py  catch_dotenv.py  check_added_large_files.py  check_ast.py  check_branch_meets_naming_convention.py  check_builtin_literals.py  check_byte_order_marker.py  check_case_conflict.py  check_docstring_first.py  check_encoding.py  check_executables_have_shebangs.py  check_fluent.py  check_gitleaks.py  check_html.py  check_iam.py  check_illegal_windows_names.py  check_json.py  check_lfs_attributes.py  check_merge_conflict.py  check_missing_inits.py  check_naming_convention.py  check_number_of_lines_count.py  check_path_edits.py  check_permitted_path_characters.py  check_projen_files.py  check_python_modules.py  check_rubocop.py  check_shebang_scripts_are_executable.py  check_spdx.py  check_symlinks.py  check_toml.py  check_unicode_replacement_char.py  check_vcs_permalinks.py  check_xml.py  check_yaml.py  check_yaml_filename_extension.py  (+46 more)
pre_commit_hooks/loaderon-hooks/Documentation/: pylint-configuration.md
pre_commit_hooks/loaderon-hooks/general_hooks/: check_branch_name.py  check_line.py  check_location.py  check_using_pylint.py  check_xml_encoding.py
pre_commit_hooks/loaderon-hooks/odoo_specific_hooks/: check_model_name.py  check_view_fields_order.py  check_view_name.py
pre_commit_hooks/loaderon-hooks/util/template_methods/: checker_template_method.py  file_bunches_lines_checker_template_method.py  file_checker_template_method.py  files_bunches_checker_template_method.py  lines_checker_template_method.py
pre_commit_hooks/loaderon_hooks/Documentation/: automatic_testing.txt  manual_testing.txt  pre_commit_yaml_config.txt
pre_commit_hooks/loaderon_hooks/general_hooks/: check_branch_name.py  check_class_docstring.py  check_line.py  check_location.py  check_using_pylint.py  check_xml_encoding.py
pre_commit_hooks/loaderon_hooks/odoo_specific_hooks/: check_model_name.py  check_view_fields_order.py  check_view_name.py
pre_commit_hooks/loaderon_hooks/tests/general_hooks/: check_class_docstring_test.py  check_line_test.py  check_location_test.py  check_using_pylint_test.py  check_xml_encoding_test.py
pre_commit_hooks/loaderon_hooks/tests/manual_testing/: runner.py
pre_commit_hooks/loaderon_hooks/tests/odoo_specific_hooks/: check_model_name_test.py  check_view_fields_order_test.py  check_view_name_test.py
pre_commit_hooks/loaderon_hooks/tests/util/: test_helpers.py
pre_commit_hooks/loaderon_hooks/util/: check_failed_exception.py  file_helpers.py  git_helpers.py  string_helpers.py
pre_commit_hooks/templates/: prepare_commit_msg_prepend.j2
templates/: prepare_commit_msg_append.j2  prepare_commit_msg_prepend.j2
testing/: util.py
testing/resources/: after.ipynb  aws_config_with_multiple_sections.ini  aws_config_with_secret.ini  aws_config_with_secret_and_session_token.ini  aws_config_with_session_token.ini  aws_config_without_secrets.ini  aws_config_without_secrets_with_spaces.ini  azure_credentials.txt  azure_no_credentials.txt  bad_encoding_yaml.yaml  bad_html_not_closed.html  bad_html_too_many_close.html  bad_html_wrong_close.html  bad_json.notjson  bad_json_latin1.nonjson  bad_xml.notxml  bad_yaml.notyaml  builtin_constructors.py  builtin_literals.py  cannot_parse_ast.notpy  duplicate_key_json.notjson  duplicate_key_yaml.notyaml  empty_object_json_multiline.json  empty_object_json_sameline.json  file_with_debug.notpy  float_formatting.json  high_precision_numbers.json  invalid_ruby.rb  jupyter_case_1_before.ipynb  jupyter_case_2.ipynb  mixed_line_ending.txt  non_ascii_pretty_formatted_json.json  nonsense.txt  not_pretty_formatted_json.json  ok_html_fragment.html  ok_html_page.html  ok_xml.xml  ok_yaml.yaml  pretty_formatted_json.json  pretty_formatted_json_no_endline.json  (+10 more)
testing/resources/auto_indent/: file_with_acceptable_indentation  file_with_bad_indentation  file_with_partial_indentation  syntax_error
testing/resources/detect_datetime_raw_manipulation/: raw_timedelta_usage__clean.py  raw_timedelta_usage__flag.py  raw_timedelta_usage__ignore.py
testing/resources/yaml_files/: not_pretty_formatted_yaml.yaml  pretty_formatted_yaml.yaml  pretty_formatted_yaml_canonical_True.yaml  pretty_formatted_yaml_default_flow_style_False.yaml  pretty_formatted_yaml_default_style_True.yaml  pretty_formatted_yaml_indent_4.yaml
tests/: README.md  auto_indent_test.py  autopep8_wrapper_test.py  catch_dotenv_test.py  check_added_large_files_test.py  check_ast_test.py  check_builtin_literals_test.py  check_byte_order_marker_test.py  check_case_conflict_test.py  check_docstring_first_test.py  check_encoding_test.py  check_executables_have_shebangs_test.py  check_fluent_test.py  check_html_test.py  check_illegal_windows_names_test.py  check_json_test.py  check_lfs_attributes_test.py  check_merge_conflict_test.py  check_missing_inits_test.py  check_no_commit_to_branch_test.py  check_number_of_lines_count_test.py  check_path_edits_test.py  check_permitted_path_characters_test.py  check_python_modules_test.py  check_rubocop_test.py  check_shebang_scripts_are_executable_test.py  check_symlinks_test.py  check_toml_test.py  check_unicode_replacement_char_test.py  check_vcs_permalinks_test.py  check_xml_test.py  check_yaml_filename_extension_test.py  check_yaml_sorted_test.py  check_yaml_test.py  conftest.py  debug_statement_hook_test.py  destroyed_symlinks_test.py  detect_aws_credentials_test.py  detect_azure_credentials_test.py  detect_datetime_now_test.py  (+32 more)
(+45 files in other folders)
